Fixed a formatting issue in PA navbar and shifted the leave match and hotkey dropdown to the right side of the tool bar for easier access.

--- a/app/assets/stylesheets/core/_base.sass
+++ b/app/assets/stylesheets/core/_base.sass
@@ -56,6 +56,9 @@ footer
   +buttonBackground($triad-color-1-light, $triad-color-1-dark)
 .btn-info
   +buttonBackground(lighten($triad-color-3, 10%), darken($triad-color-3, 10%))
+.navbar
+  .nav
+    float: right
 
 // ----- Block Content ----- //
 
